--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -20,7 +20,6 @@
   flex-basis: 45%;
   padding: 1.5rem;
   text-align: left;
-  color: inherit;
   text-decoration: none;
   border: 1px solid #eaeaea;
   border-radius: 10px;
@@ -29,14 +28,11 @@
 .card:hover {
   border-color: #0070f3;
 }
-.card img {
-  border-radius: 10px;
-}
 .title {
-  margin: 0;
   font-size: 2.5rem;
+  font-weight: bold;
 }
 .description {
-  margin: 1rem 0;
+  margin-top: 1rem;
   font-size: 1.25rem;
 }
